@@ -12,8 +12,6 @@ repositories {
 	maven { url 'https://jitpack.io' }
 	mavenLocal()
 }
-sourceCompatibility = 8
-targetCompatibility = 8
 
 jar {
 	manifest {
@@ -28,6 +26,15 @@ jar {
 	from {
 		configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
 	}
+}
+tasks.withType(JavaCompile) {
+	options.incremental = true
+	sourceCompatibility = 8
+	targetCompatibility = 8
+
+//		options.compilerArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
+	options.compilerArgs.remove("--enable-preview")
+	//	options.compilerArgs.add("-verbose")
 }
 
 dependencies {
